# python-static-site

./: build.sh  main.py  main.sh  pyproject.toml  test.sh
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: block_md.py  copystatic.py  htmlnode.py  inline_md.py  main.py  page.py  test_htmlnode.py  test_textnode.py  textnode.py  utils.py
src/tests/: test_block_md.py  test_htmlnode.py  test_inline_md.py  test_page.py  test_textnode.py  test_utils.py
