[project]
name = "python-static-site"
version = "0.1.0"
description = "Python project for a static site generator part of the Boot.dev course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.1"]

[tool.pytest.ini_options]
pythonpath = ["."]
